--- a/PankKortRekk/bin/KorttiRekisteri/MuokkaJasenGUIView.fxml
+++ b/PankKortRekk/bin/KorttiRekisteri/MuokkaJasenGUIView.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.MuokkaJasenGUIController"> 
+<BorderPane stylesheets="@paaikkuna.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.MuokkaJasenGUIController"> 
    <bottom>
       <VBox BorderPane.alignment="CENTER">
          <children>
