--- a/PankKortRekk/bin/KorttiRekisteri/PaaikkunaGUIView.fxml
+++ b/PankKortRekk/bin/KorttiRekisteri/PaaikkunaGUIView.fxml
@@ -28,50 +28,47 @@
                      </content>
                      </ScrollPane>
                   
-                  <ScrollPane fx:id="panelAsiakas" fitToWidth="true" layoutX="250.0" layoutY="79.0" pannable="true" prefHeight="347.0" prefWidth="395.0" BorderPane.alignment="CENTER">
-                     <content>
-                        <GridPane fx:id="gridAsiakas" hgap="10.0" minWidth="-Infinity" prefHeight="345.0" prefWidth="391.0" style="-fx-font-size: 14px;">
-                           <columnConstraints>
-                              <ColumnConstraints fillWidth="false" halignment="RIGHT" hgrow="NEVER" maxWidth="5.0" minWidth="0.0" prefWidth="0.0" />
-                              <ColumnConstraints hgrow="ALWAYS" maxWidth="324.0" minWidth="10.0" prefWidth="324.0" />
-                              <ColumnConstraints hgrow="ALWAYS" maxWidth="324.0" minWidth="10.0" prefWidth="324.0" />
-                           </columnConstraints>
-                           <rowConstraints>
-                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                           </rowConstraints>
-                           <children>
-                              <Label text="nimi" GridPane.columnIndex="1" />
-                              <Label text="hetu" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <Label text="katuosoite" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <Label text="postinumero" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                              <Label text="postitoimipaikka" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                              <Label text="puhelinnumero" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                              <Label text="sähköposti" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                              <TextField fx:id="editNimi" text="Erik Sandren" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" />
-                              <TextField fx:id="editHetu" text="010245-123U" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
-                              <TextField fx:id="editKatuosoite" text="Paratiisitie 13" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
-                              <TextField fx:id="editPostinumero" text="40740" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" />
-                              <TextField fx:id="editPostiToimipaikka" prefHeight="30.0" prefWidth="358.0" text="Helsinki" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" />
-                              <TextField fx:id="editPuhelinnumero" text="358445566778" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" />
-                              <TextField fx:id="editSahkoposti" text="erik@feetpics.com" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" />
-                           </children>
-                           <padding>
-                              <Insets left="10.0" right="10.0" top="10.0" />
-                           </padding>
-                        </GridPane>
-                     </content>
-                  </ScrollPane>
+                  <ScrollPane fx:id="panelAsiakas" fitToWidth="true" layoutX="250.0" layoutY="79.0" pannable="true" prefHeight="347.0" prefWidth="392.0" BorderPane.alignment="CENTER">
+    <content>
+        <GridPane fx:id="gridAsiakas" hgap="10.0" prefHeight="345.0" prefWidth="385.0" style="-fx-font-size: 14px;">
+            <!-- Added padding to shift contents to the right -->
+            <padding>
+                <Insets bottom="10.0" left="20.0" right="10.0" top="10.0" />
+            </padding>
+            <columnConstraints>
+                <ColumnConstraints fillWidth="false" halignment="RIGHT" hgrow="NEVER" maxWidth="253.0" minWidth="50.0" prefWidth="141.0" />
+                <ColumnConstraints hgrow="ALWAYS" maxWidth="294.0" minWidth="10.0" prefWidth="189.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="52.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <Label text="nimi" />
+                <Label text="hetu" GridPane.rowIndex="1" />
+                <Label text="katuosoite" GridPane.rowIndex="2" />
+                <Label text="postinumero" GridPane.rowIndex="3" />
+                <Label text="postitoimipaikka" GridPane.rowIndex="4" />
+                <Label text="puhelinnumero" GridPane.rowIndex="5" />
+                <Label text="sähköposti" GridPane.rowIndex="6" />
+                <TextField fx:id="editNimi" text="Erik Sandren" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" />
+                <TextField fx:id="editHetu" text="010245-123U" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
+                <TextField fx:id="editKatuosoite" text="Paratiisitie 13" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
+                <TextField fx:id="editPostinumero" text="40740" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" />
+                <TextField fx:id="editPostiToimipaikka" prefHeight="30.0" prefWidth="358.0" text="Helsinki" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" />
+                <TextField fx:id="editPuhelinnumero" text="358445566778" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" />
+                <TextField fx:id="editSahkoposti" text="erik@feetpics.com" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" />
+            </children>
+        </GridPane>
+    </content>
+</ScrollPane>
+
+
                   
 					<TextField layoutX="657.0" layoutY="140.0" prefHeight="25.0" prefWidth="140.0" text="Luottokortin tiedot" />
       						<ScrollPane fx:id="panelCredit" fitToHeight="true" fitToWidth="true" layoutX="657.0" layoutY="166.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="52.0" prefWidth="724.0">
